Changes from static analysis.